# robium

./: .env  .eslintrc.js  .gitignore  CLAUDE.md  GITHUB_INTEGRATION_SUMMARY.md  README.md  docker-compose.yml  env.example  package-lock.json  package.json  test-github-integration.js  tsconfig.json
.cascade/: rules.md
.cursor/: mcp.json
.cursor/rules/: robium_backend.mdc  robium_frontend.mdc  robium_monorepo.mdc
.github/workflows/: ci.yml
.taskmaster/: state.json
.taskmaster/docs/: development-todos-prd.txt
.taskmaster/reports/: task-complexity-report.json
.taskmaster/tasks/: tasks-backup-20250728-180656.json  tasks.json
archive/legacy/: .gitignore  .gitmodules  CLEANUP_SUMMARY.md  README.md  TMP_REDESIGN_PRD.md  docker-compose.yml  package-lock.json  package.json
archive/legacy/.github/workflows/: ci.yml
archive/legacy/.taskmaster/: config.json
archive/legacy/.taskmaster/reports/: task-complexity-report.json
archive/legacy/scripts/: README.md  cleanup.sh  start-dev-fast.sh  start-dev.sh
docs/: PRD_REDESIGN.md  PROJECT_DESCRIPTION.md  PROJECT_RULES.md
ros/: .dockerignore  Dockerfile  README.md  docker-compose.yml
ros/src/: README_mock_packages.md  mock_packages_launch.py
ros/src/amcl_localization/: CMakeLists.txt  package.xml
ros/src/amcl_localization/src/: amcl_mock_node.cpp
ros/src/hello_world/: CMakeLists.txt  package.xml
ros/src/kalman_filter/: CMakeLists.txt  package.xml
ros/src/kalman_filter/src/: kalman_filter_mock_node.cpp
ros/src/navigation_core/nav2_bringup/: CMakeLists.txt  package.xml
ros/src/path_planning/: CMakeLists.txt  package.xml
ros/src/path_planning/src/: path_planning_mock_node.cpp
ros/src/perception_basic/vision_msgs/: package.xml
ros/src/person_tracking/: CMakeLists.txt  package.xml
ros/src/person_tracking/src/: person_tracking_mock_node.cpp
ros/src/sensor_fusion/robot_localization/: package.xml
scripts/: PRD.md  build-ros-image.sh  start-dev-fast.sh  start-dev.sh
