<?xml version="1.0"?>
<package format="3">
  <name>hello_world</name>
  <version>0.0.0</version>
  <description>A simple hello world package</description>
  <maintainer email="ros@robium.dev">ros</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package> 