<?xml version="1.0"?>
<package format="3">
  <name>nav2_bringup</name>
  <version>1.0.0</version>
  <description>Navigation 2 bringup package for Robium</description>
  <maintainer email="ros@robium.dev">ros</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>nav2_controller</depend>
  <depend>nav2_planner</depend>
  <depend>nav2_localizer</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package> 