<?xml version="1.0"?>
<package format="3">
  <name>vision_msgs</name>
  <version>1.0.0</version>
  <description>Vision messages package for Robium</description>
  <maintainer email="ros@robium.dev">ros</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package> 